--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>To Do list</title>
   </head>
 
@@ -14,17 +14,17 @@
       </div>
 
       <div class="menu">
-        <label for="adicionar">Adicionar tarefa</label>
-        <button id="adicionar">+</button>
+        <label for="adicionar" class="labelTitulo">Adicionar tarefa</label>
+        <button id="adicionar" class="adicionar">+</button>
 
-        <label for="remover">Remover tafera</label>
-        <button id="remover">-</button>
+        <label for="remover" class="labelTitulo">Remover tafera</label>
+        <button id="remover" class="remover">-</button>
 
-        <label for="organizador">Organizar por</label>
-        <select id="organizador">
-          <option value="nome">Nome</option>
+        <label for="ordenar" class="labelTitulo">Ordenar por</label>
+        <select id="ordenar" class="ordenar">
+          <option value="nome" selected>Nome</option>
           <option value="prazo">Prazo</option>
-          <option value="dataCriacao" selected>Data de criação</option>
+          <option value="descricao">Descrição</option>
         </select>
       </div>
     </section>
@@ -32,48 +32,33 @@
     <!--Essa sessão não está sendo exibida por padrão-->
       <section class="addTarefa">
         <h2>Adicionar nova tarefa</h2>
-        <form id="tarefa-form">
-            <div class="inputNome">
+        <form class="tarefa-form">
+            <div class="nome">
               <label for="nome">Nome:</label>
-              <input id="nome" name="nomeTarefa" type="text" placeholder="Nome da tarefa" class="inputNome">
+              <input id="nome" name="nome" type="text" placeholder="Nome da tarefa" class="inputNome">
             </div>
 
-            <div class="inputPrazo">
+            <div class="prazo">
               <label for="prazo">Prazo</label>
               <input id="prazo" class="inputPrazo" type="date" name="prazo">
             </div>
 
-            <div class="inputDescricao">
+            <div class="descricao">
               <label for="descricao">Descrição:</label>
               <input id="descricao" name="descricao" type="text" placeholder=
       "Detalhe sua tarefa" class="inputDescricao">
             </div>
         </form>
-        <button id="salvar">Salvar</button>
-        <button id="cancelar">Cancelar</button>
+        <button class="salvar">Salvar</button>
+        <button class="cancelar">Cancelar</button>
       </section>
 
     <main>
       <section class="lista">
-        <div class="tarefa" id="tarefa">
-          <div id="nome">
-            <label for="texto">Tarefa</label>
-            <p id="texto">Nome aqui</p>
-          </div>
-
-          <div id="prazo">
-            <label for="prazo-texto">Prazo</label>
-            <p id="texto">Prazo aqui</p>
-          </div>
-
-          <div id="descricao">
-            <label for="descricao-texto">Descrição</label>
-            <p id="texto">Descrição da tarefa aqui</p>
-          </div>
-        </div>
       </section>
     </main>
-    <script src="adicionarTarefa.js"></script>
-    <script src="removerTarefa.js"></script>
+    <script src="js/adicionarTarefa.js"></script>
+    <script src="js/removerTarefa.js"></script>
+    <script src="js/ordenarTarefas.js"></script>
   </body>
 </html>
