--- a/index.html
+++ b/index.html
@@ -26,15 +26,29 @@
           <option value="prazo">Prazo</option>
           <option value="descricao">Descrição</option>
         </select>
+          
+          <label for="filtrar" class="labelTitulo">Filtrar</label>
+        <select id="filtrar" class="filtrar">
+          <option value="none" selected></option>
+          <option value="vermelho" class="background-vermelho"></option>
+          <option value="amarelo" class="background-amarelo"></option>
+          <option value="verde" class="background-verde"></option>
+          <option value="azul" class="background-azul"></option>
+          <option value="rosa" class="background-rosa"></option>
+        </select>
+      </div>
+      <div class="notification-bar ocultar">
+        <p class="mensagem-erro"></p>
+        <button class="close-button">X</button>
       </div>
     </section>
 
     <!--Essa sessão não está sendo exibida por padrão-->
-      <section class="addTarefa">
-        <h2>Adicionar nova tarefa</h2>
+      <section class="addTarefa ocultar">
+        <h2 class="titulo-addTarefa">Adicionar nova tarefa</h2>
         <form class="tarefa-form">
             <div class="nome">
-              <label for="nome">Nome:</label>
+              <label for="nome">Nome</label>
               <input id="nome" name="nome" type="text" placeholder="Nome da tarefa" class="inputNome">
             </div>
 
@@ -44,9 +58,20 @@
             </div>
 
             <div class="descricao">
-              <label for="descricao">Descrição:</label>
+              <label for="descricao" class="descricao-titulo">Descrição</label>
               <input id="descricao" name="descricao" type="text" placeholder=
-      "Detalhe sua tarefa" class="inputDescricao">
+                "Detalhe sua tarefa" class="inputDescricao">
+            </div>
+            
+            <div class="cor">
+                <label for="cor" class="cor-titulo">Cor</label>
+                <select name="cor" id="cor" class="inputCor">
+                    <option value="vermelho" class="background-vermelho"> </option>
+                    <option value="amarelo" class="background-amarelo"> </option>
+                    <option value="verde" class="background-verde"> </option>
+                    <option value="azul" class="background-azul" selected> </option>
+                    <option value="rosa" class="background-rosa"> </option>
+                </select>
             </div>
         </form>
         <button class="salvar">Salvar</button>
@@ -60,5 +85,7 @@
     <script src="js/adicionarTarefa.js"></script>
     <script src="js/removerTarefa.js"></script>
     <script src="js/ordenarTarefas.js"></script>
+    <script src="js/notificacao.js"></script>
+    <script src="js/filtrarTarefas.js"></script>
   </body>
 </html>
