Modo de organização modificado de 'Descrição' para 'Data de criação'

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <select id="ordenar" class="ordenar">
           <option value="nome" selected>Nome</option>
           <option value="prazo">Prazo</option>
-          <option value="descricao">Descrição</option>
+          <option value="data">Data</option>
         </select>
           
           <label for="filtrar" class="labelTitulo">Filtrar</label>
