--- a/index.html
+++ b/index.html
@@ -49,39 +49,41 @@
     </section>
 
     <!--Essa sessão não está sendo exibida por padrão-->
-      <section class="addTarefa ocultar">
-        <h2 class="titulo-addTarefa">Adicionar nova tarefa</h2>
-        <form class="tarefa-form">
-            <div class="nome">
-              <label for="nome">Nome</label>
-              <input id="nome" name="nome" type="text" placeholder="Nome da tarefa" class="inputNome" maxlength="50">
-            </div>
+    <section class="secao-addTarefa ocultar">
+      <div class="addTarefa">
+            <h2 class="titulo-addTarefa">Adicionar nova tarefa</h2>
+            <form class="tarefa-form">
+                <div class="nome">
+                  <label for="nome">Nome</label>
+                  <input id="nome" name="nome" type="text" placeholder="Nome da tarefa" class="inputNome" maxlength="50">
+                </div>
 
-            <div class="prazo">
-              <label for="prazo">Prazo</label>
-              <input id="prazo" class="inputPrazo" type="date" name="prazo">
-            </div>
+                <div class="prazo">
+                  <label for="prazo">Prazo</label>
+                  <input id="prazo" class="inputPrazo" type="date" name="prazo">
+                </div>
 
-            <div class="descricao">
-              <label for="descricao" class="descricao-titulo">Descrição</label>
-              <input id="descricao" name="descricao" type="text" placeholder=
-                "Detalhe sua tarefa" class="inputDescricao" maxlength="200">
-            </div>
-            
-            <div class="cor">
-                <label for="cor" class="cor-titulo">Cor</label>
-                <select name="cor" id="cor" class="inputCor">
-                    <option value="vermelho" class="background-vermelho"> </option>
-                    <option value="amarelo" class="background-amarelo"> </option>
-                    <option value="verde" class="background-verde"> </option>
-                    <option value="azul" class="background-azul" selected> </option>
-                    <option value="rosa" class="background-rosa"> </option>
-                </select>
-            </div>
-        </form>
-        <button class="salvar">Salvar</button>
-        <button class="cancelar">Cancelar</button>
-      </section>
+                <div class="descricao">
+                  <label for="descricao" class="descricao-titulo">Descrição</label>
+                  <input id="descricao" name="descricao" type="text" placeholder=
+                    "Detalhe sua tarefa" class="inputDescricao" maxlength="200">
+                </div>
+
+                <div class="cor">
+                    <label for="cor" class="cor-titulo">Cor</label>
+                    <select name="cor" id="cor" class="inputCor">
+                        <option value="vermelho" class="background-vermelho"> </option>
+                        <option value="amarelo" class="background-amarelo"> </option>
+                        <option value="verde" class="background-verde"> </option>
+                        <option value="azul" class="background-azul" selected> </option>
+                        <option value="rosa" class="background-rosa"> </option>
+                    </select>
+                </div>
+            </form>
+            <button class="salvar">Salvar</button>
+            <button class="cancelar">Cancelar</button>
+      </div>
+    </section>
     <main>
       <section id="lista" class="lista">
 
