Dada uma polida em todo o código. .Código mais compreensível.

--- a/index.html
+++ b/index.html
@@ -94,5 +94,6 @@
     <script src="js/ordenarTarefas.js"></script>
     <script src="js/notificacao.js"></script>
     <script src="js/filtrarTarefas.js"></script>
+      <script src="js/controle-pagina.js"></script>
   </body>
 </html>
