Corrigido problema de incompatibilidade com navegadores que não aceitavam localStorage. .Bug com a função de remover tarefa corrigido.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCKTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -90,10 +90,10 @@
       </section>
     </main>
     <script src="js/controle-pagina.js"></script>
+    <script src="js/notificacao.js"></script>
     <script src="js/adicionarTarefa.js"></script>
     <script src="js/removerTarefa.js"></script>
     <script src="js/ordenarTarefas.js"></script>
-    <script src="js/notificacao.js"></script>
     <script src="js/filtrarTarefas.js"></script>
   </body>
 </html>
